styles/style.css
html,
body {
  height: 100%;
  margin: 0;
  font-family: Arial, Helvetica, sans-serif;
}

h1 {
  display: inline-block;
}

a {
  color: inherit;
  text-decoration: inherit;
  cursor: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" style="font-size: 40px; font-family: Arial, Helvetica, sans-serif;"><text y="25">ɛ</text></svg>'), auto;
}

* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

body {
  display: flex;
  flex-flow: column;
  align-items: center;
  justify-content: center;
}

h1 {
  margin-left: 20px;
}

header {
  width: 100%;
  margin: 20px;
}

#gallery, #spiega {
  flex: 1;
  overflow: hidden;
  position: relative;
}

img {
  opacity: 0.0
}

img.active {
  margin: auto;
  max-height: 100%;
  max-width: 100%;
  position: absolute;
  top:0;
  left:0;
  right:0;
  bottom:0;
  opacity: 0.9
}

#spiega {
  margin-top: 8%;
  font-size: 120%;
  width: 33%;
  display: flex;
  flex-direction: column;
  /* border: 1px solid black; */
}
#spiega .text {
  flex: 6;
}
#spiega .icons {
  flex: 3;
  display: flex;
  flex-direction: row;
}
.icon {
  margin-right: 25px;
  width: 30px;
  height: 30px;
}

@media only screen
and (min-device-width : 375px)
and (max-device-width : 667px) {
  #spiega {
    margin: 20px;
    width: unset;
  }
  #spiega .text {
    /* border: 1px solid red; */
    flex: 1;
  }
  #spiega .icons {
    /* border: 1px solid red; */
    flex: 1;
  }
}

